feat: delete recipe
